test/variables/diten/loopIndexConst.good
loopIndexConst.chpl:6: error: cannot assign to const variable
loopIndexConst.chpl:11: error: cannot assign to const variable
